somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <img id='icon_0_2' src='asset/tj_0_2_0.png' class='tj_icon'>
                     </div>
                     <div class="icon_wrap">
-                        <img id='icon_0_3' src='asset/tj_0_3_0.png' class='tj_icon'>
+                        <img id='icon_0_3' src='asset/tj_0_3_0.png' style="display:none" class='tj_icon'>
                     </div>
                     <div class="btn_wrap">
                         <img id='btn_charge_0' src='asset/charge_0.png' class='brn_charge'>
