somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ $(document).ready(function(){
 
     requestChaPicInfo();
 
-    history.pushState(null, null, document.URL);
-    window.addEventListener('popstate', function () {
-        history.pushState(null, null, document.URL);
-    });
+    // history.pushState(null, null, document.URL);
+    // window.addEventListener('popstate', function () {
+    //     history.pushState(null, null, document.URL);
+    // });
 });
 
 function requestChaPicInfo () {
