somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@ function requestChaPicInfo () {
             logStat();
         }
 
-        if (timeRepay > 40000) {
-            toResultState();
-        }
+        // if (timeRepay > 40000) {
+        //     toResultState();
+        // }
        
         for (var i=0; i< StageList.length; i++) {
             var stage =  StageList[i];
