--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
     <div class="container" id="view_result">
         <img src="asset/bg.jpg" class="img_bg"/>
-        <h2 class="title" id="result_title" style="display:none">欢乐找茬</h2>
+        <h2 class="title" id="result_title">欢乐找茬</h2>
 
-        <img src="asset/default_result.png" id="result_info_img"/>
+        <img src="asset/default_result_0.png" id="result_info_img"/>
         <img src="asset/btn_tj_0.png" id="btn_join" onclick="onTuJian()"/>
     </div>
 
