somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
     </div>
    
 </body>
-
 <script src="js/jquery.js"></script>
 <script src="js/jweixin-1.2.0.js"></script>
 <script src="js/md5.js"> </script>
-<!-- <script src='js/vconsole.min.js'></script> -->
-
+<script src='js/vconsole.min.js'></script>
+<script>
 var TS_Enter = getCurTimeStamp();
 var TIMING_REPAY_PLUS = 0 * 1000; // ms
 
