sth to flip master

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="container" id="view_play">
-        <img src="asset/bg.jpg" class="img_bg"/>
+        <img src="asset/bg_.jpg" class="img_bg"/>
         <!-- <h4 id="debug_info">debug info</h4> -->
         <div id="pic_area">
             <img id="pic">
@@ -26,11 +26,11 @@
         <div class="sec">
             <img id="btn_tujian" src="asset/btn_tj_0.png" onclick="onTuJian()">
         </div>
-        <h3 id="desc">测试下你的眼力! 查看上图与大屏幕不同之处, 赢取丰厚奖品!</h3>
+        <h3 id="desc">测试你的眼力! 对比上图与大屏幕不同的地方，赢取丰厚礼品!</h3>
     </div>
 
     <div class="container" id="view_wait">
-        <img src="asset/bg.jpg" class="img_bg"/>
+        <img src="asset/bg_0.jpg" class="img_bg"/>
         <h2 id="action_name" class="title">欢乐找茬</h2>
         <h2 id="wait_desc">精彩马上回来<br>倒计时</h2>
         <section id="wait_count_down">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="container" id="view_result">
-        <img src="asset/bg.jpg" class="img_bg"/>
+        <img src="asset/bg_0.jpg" class="img_bg"/>
         <h2 class="title" id="result_title">欢乐找茬</h2>
 
         <img src="asset/default_result_0.png" id="result_info_img"/>
