somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="container" id="view_play">
-        <img src="asset/bg_.jpg" class="img_bg"/>
+        <img src="asset/bg_0.jpg" class="img_bg"/>
         <!-- <h4 id="debug_info">debug info</h4> -->
         <div id="pic_area">
             <img id="pic">
