--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="sec">
             <img id="btn_tujian" src="asset/btn_tj_0.png" onclick="onTuJian()">
         </div>
-        <h3 id="desc">测试你的眼力! 对比上图与大屏幕不同的地方，赢取丰厚礼品!</h3>
+        <h3 id="desc">对比上图与大屏幕不同的地方，赢取丰厚礼品！（每张图存在1处茬点，选择后请耐心等待下一张图出现）</h3>
     </div>
 
     <div class="container" id="view_wait">
